boltffi_backend/tests/jni/snapshots/jni__callback__jni_bridge_renders_callback_method_callback_handle_returns.snap
---
source: boltffi_backend/tests/jni/callback.rs
expression: "rendered_fixture(\"callback/callback_method_callback_handle_return\")"
---
===== jni/demo.h =====
<c abi support declarations>
typedef struct {
    void (*free)(uint64_t);
    uint64_t (*clone)(uint64_t);
    uint32_t (*on_value)(uint64_t, uint32_t);
} ___ChildVTable;
typedef struct {
    void (*free)(uint64_t);
    uint64_t (*clone)(uint64_t);
    BoltFFICallbackHandle (*child)(uint64_t);
} ___ListenerVTable;
void boltffi_register_callback_demo_child(const ___ChildVTable *vtable);
BoltFFICallbackHandle boltffi_create_callback_demo_child(uint64_t handle);
void boltffi_register_callback_demo_listener(const ___ListenerVTable *vtable);
BoltFFICallbackHandle boltffi_create_callback_demo_listener(uint64_t handle);

===== jni/jni_glue.c =====
<jni source includes>
<jni thread runtime>
<jni exception helpers>
typedef struct {
    void (*free)(uint64_t handle);
    uint64_t (*clone)(uint64_t handle);
} BoltFFICallbackVTablePrefix;

static const BoltFFICallbackVTablePrefix *boltffi_jni_callback_vtable_prefix(const BoltFFICallbackHandle *callback) {
    return callback == NULL ? NULL : (const BoltFFICallbackVTablePrefix *)callback->vtable;
}

static void boltffi_jni_release_callback_value(BoltFFICallbackHandle callback) {
    const BoltFFICallbackVTablePrefix *vtable = boltffi_jni_callback_vtable_prefix(&callback);
    if (callback.handle != 0 && vtable != NULL && vtable->free != NULL) {
        vtable->free(callback.handle);
    }
}

static jlong boltffi_jni_callback_handle_new_owned(JNIEnv *env, BoltFFICallbackHandle callback) {
    if (callback.handle == 0 || callback.vtable == NULL) {
        return 0;
    }
    BoltFFICallbackHandle *stored_callback = (BoltFFICallbackHandle *)malloc(sizeof(BoltFFICallbackHandle));
    if (stored_callback == NULL) {
        boltffi_jni_release_callback_value(callback);
        boltffi_jni_throw_runtime(env, "failed to allocate BoltFFI callback handle");
        return 0;
    }
    *stored_callback = callback;
    return (jlong)(uintptr_t)stored_callback;
}

static BoltFFICallbackHandle *boltffi_jni_callback_handle_ref(jlong handle) {
    return handle == 0 ? NULL : (BoltFFICallbackHandle *)(uintptr_t)handle;
}

typedef BoltFFICallbackHandle (*BoltFFICallbackCreate)(uint64_t handle);

static BoltFFICallbackHandle boltffi_jni_callback_parameter(uint64_t handle, BoltFFICallbackCreate create) {
    if ((handle & 1u) != 0u) {
        return create(handle);
    }
    const BoltFFICallbackHandle *stored_callback = boltffi_jni_callback_handle_ref((jlong)handle);
    const BoltFFICallbackVTablePrefix *vtable = boltffi_jni_callback_vtable_prefix(stored_callback);
    if (stored_callback == NULL || stored_callback->handle == 0 || vtable == NULL || vtable->clone == NULL) {
        return (BoltFFICallbackHandle){0};
    }
    return (BoltFFICallbackHandle){
        .handle = vtable->clone(stored_callback->handle),
        .vtable = stored_callback->vtable,
    };
}

static void boltffi_jni_callback_handle_release(BoltFFICallbackHandle *callback) {
    if (callback == NULL) {
        return;
    }
    boltffi_jni_release_callback_value(*callback);
    free(callback);
}

static jlong boltffi_jni_callback_handle_clone(JNIEnv *env, const BoltFFICallbackHandle *callback) {
    const BoltFFICallbackVTablePrefix *vtable = boltffi_jni_callback_vtable_prefix(callback);
    if (callback == NULL || callback->handle == 0 || vtable == NULL || vtable->clone == NULL) {
        return 0;
    }
    BoltFFICallbackHandle cloned_callback = {
        .handle = vtable->clone(callback->handle),
        .vtable = callback->vtable,
    };
    if (cloned_callback.handle == 0) {
        return 0;
    }
    return boltffi_jni_callback_handle_new_owned(env, cloned_callback);
}

JNIEXPORT jlong JNICALL Java_com_boltffi_demo_Native_boltffi_1callback_1handle_1clone(JNIEnv *env, jclass cls, jlong handle) {
    (void)cls;
    return boltffi_jni_callback_handle_clone(env, boltffi_jni_callback_handle_ref(handle));
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1callback_1handle_1release(JNIEnv *env, jclass cls, jlong handle) {
    (void)env;
    (void)cls;
    boltffi_jni_callback_handle_release(boltffi_jni_callback_handle_ref(handle));
}

static jclass g____ChildVTable_class = NULL;
static jmethodID g____ChildVTable_free_method = NULL;
static jmethodID g____ChildVTable_clone_method = NULL;
static jmethodID g____ChildVTable_on_value_method = NULL;

static void ___ChildVTable_free(uint64_t handle) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return;
    }
    (*env)->CallStaticVoidMethod(env, g____ChildVTable_class, g____ChildVTable_free_method, (jlong)handle);
    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);
}

static uint64_t ___ChildVTable_clone(uint64_t handle) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return 0;
    }
    jlong result = (*env)->CallStaticLongMethod(env, g____ChildVTable_class, g____ChildVTable_clone_method, (jlong)handle);
    if (boltffi_jni_clear_exception(env)) {
        boltffi_jni_exit(env, attached);
        return 0;
    }
    boltffi_jni_exit(env, attached);
    return (uint64_t)result;
}

static uint32_t ___ChildVTable_on_value(uint64_t handle, uint32_t value) {
    JNIEnv *env = NULL;
    int attached = 0;

    if (!boltffi_jni_enter(&env, &attached)) {
        return 0;
    }

    uint32_t result = (uint32_t)(*env)->CallStaticIntMethod(env, g____ChildVTable_class, g____ChildVTable_on_value_method, (jlong)handle, (jint)value);
    if ((*env)->ExceptionCheck(env)) {
        goto __boltffi_fail;
    }

    boltffi_jni_exit(env, attached);
    return result;
__boltffi_fail:;

    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);

    return 0;
}

static ___ChildVTable g____ChildVTable_vtable = {
    .free = ___ChildVTable_free,
    .clone = ___ChildVTable_clone,
    .on_value = ___ChildVTable_on_value,
};

static bool boltffi_jni_load____ChildVTable_callbacks(JNIEnv *env) {
    if (!boltffi_jni_lookup_global_class_with_diagnostic(env, "com/boltffi/demo/ChildCallbacks", "com/boltffi/demo/ChildCallbacks", &g____ChildVTable_class)) {
        return false;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____ChildVTable_class, "com/boltffi/demo/ChildCallbacks", "free", "free", "(J)V", "(J)V", &g____ChildVTable_free_method)) {
        goto fail;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____ChildVTable_class, "com/boltffi/demo/ChildCallbacks", "clone", "clone", "(J)J", "(J)J", &g____ChildVTable_clone_method)) {
        goto fail;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____ChildVTable_class, "com/boltffi/demo/ChildCallbacks", "on_value", "on_value", "(JI)I", "(JI)I", &g____ChildVTable_on_value_method)) {
        goto fail;
    }
    boltffi_register_callback_demo_child(&g____ChildVTable_vtable);
    return true;
fail:
    (*env)->DeleteGlobalRef(env, g____ChildVTable_class);
    g____ChildVTable_class = NULL;
    return false;
}

static void boltffi_jni_unload____ChildVTable_callbacks(JNIEnv *env) {
    if (g____ChildVTable_class != NULL) {
        (*env)->DeleteGlobalRef(env, g____ChildVTable_class);
    }
    g____ChildVTable_class = NULL;
    g____ChildVTable_free_method = NULL;
    g____ChildVTable_clone_method = NULL;
    g____ChildVTable_on_value_method = NULL;
}

static jclass g____ListenerVTable_class = NULL;
static jmethodID g____ListenerVTable_free_method = NULL;
static jmethodID g____ListenerVTable_clone_method = NULL;
static jmethodID g____ListenerVTable_child_method = NULL;

static void ___ListenerVTable_free(uint64_t handle) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return;
    }
    (*env)->CallStaticVoidMethod(env, g____ListenerVTable_class, g____ListenerVTable_free_method, (jlong)handle);
    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);
}

static uint64_t ___ListenerVTable_clone(uint64_t handle) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return 0;
    }
    jlong result = (*env)->CallStaticLongMethod(env, g____ListenerVTable_class, g____ListenerVTable_clone_method, (jlong)handle);
    if (boltffi_jni_clear_exception(env)) {
        boltffi_jni_exit(env, attached);
        return 0;
    }
    boltffi_jni_exit(env, attached);
    return (uint64_t)result;
}

static BoltFFICallbackHandle ___ListenerVTable_child(uint64_t handle) {
    JNIEnv *env = NULL;
    int attached = 0;

    if (!boltffi_jni_enter(&env, &attached)) {
        return (BoltFFICallbackHandle){0};
    }

    jlong __boltffi_return_handle = (*env)->CallStaticLongMethod(env, g____ListenerVTable_class, g____ListenerVTable_child_method, (jlong)handle);
    if ((*env)->ExceptionCheck(env)) {
        goto __boltffi_fail;
    }

    BoltFFICallbackHandle result = boltffi_create_callback_demo_child((uint64_t)__boltffi_return_handle);

    boltffi_jni_exit(env, attached);
    return result;
__boltffi_fail:;

    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);

    return (BoltFFICallbackHandle){0};
}

static ___ListenerVTable g____ListenerVTable_vtable = {
    .free = ___ListenerVTable_free,
    .clone = ___ListenerVTable_clone,
    .child = ___ListenerVTable_child,
};

static bool boltffi_jni_load____ListenerVTable_callbacks(JNIEnv *env) {
    if (!boltffi_jni_lookup_global_class_with_diagnostic(env, "com/boltffi/demo/ListenerCallbacks", "com/boltffi/demo/ListenerCallbacks", &g____ListenerVTable_class)) {
        return false;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____ListenerVTable_class, "com/boltffi/demo/ListenerCallbacks", "free", "free", "(J)V", "(J)V", &g____ListenerVTable_free_method)) {
        goto fail;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____ListenerVTable_class, "com/boltffi/demo/ListenerCallbacks", "clone", "clone", "(J)J", "(J)J", &g____ListenerVTable_clone_method)) {
        goto fail;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____ListenerVTable_class, "com/boltffi/demo/ListenerCallbacks", "child", "child", "(J)J", "(J)J", &g____ListenerVTable_child_method)) {
        goto fail;
    }
    boltffi_register_callback_demo_listener(&g____ListenerVTable_vtable);
    return true;
fail:
    (*env)->DeleteGlobalRef(env, g____ListenerVTable_class);
    g____ListenerVTable_class = NULL;
    return false;
}

static void boltffi_jni_unload____ListenerVTable_callbacks(JNIEnv *env) {
    if (g____ListenerVTable_class != NULL) {
        (*env)->DeleteGlobalRef(env, g____ListenerVTable_class);
    }
    g____ListenerVTable_class = NULL;
    g____ListenerVTable_free_method = NULL;
    g____ListenerVTable_clone_method = NULL;
    g____ListenerVTable_child_method = NULL;
}

JNIEXPORT jint JNICALL JNI_OnLoad(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    jint env_result = (*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6);
    if (env_result != JNI_OK) {
        fprintf(stderr, "BoltFFI JNI_OnLoad failed: GetEnv(JNI_VERSION_1_6) returned %d\n", (int)env_result);
        return JNI_ERR;
    }
    if (!boltffi_jni_lookup_global_class_with_diagnostic(env, "com/boltffi/demo/Native", "com/boltffi/demo/Native", &boltffi_jni_native_class)) {
        return JNI_ERR;
    }
    if (!boltffi_jni_load____ChildVTable_callbacks(env)) {
        boltffi_jni_unload____ChildVTable_callbacks(env);
        boltffi_jni_unload____ListenerVTable_callbacks(env);
        (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        boltffi_jni_native_class = NULL;
        return JNI_ERR;
    }
    if (!boltffi_jni_load____ListenerVTable_callbacks(env)) {
        boltffi_jni_unload____ChildVTable_callbacks(env);
        boltffi_jni_unload____ListenerVTable_callbacks(env);
        (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        boltffi_jni_native_class = NULL;
        return JNI_ERR;
    }
    boltffi_jni_vm = vm;
    return JNI_VERSION_1_6;
}

JNIEXPORT void JNICALL JNI_OnUnload(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    if ((*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6) == JNI_OK) {
        boltffi_jni_unload____ChildVTable_callbacks(env);
        boltffi_jni_unload____ListenerVTable_callbacks(env);
        if (boltffi_jni_native_class != NULL) {
            (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        }
    }
    boltffi_jni_vm = NULL;
    boltffi_jni_native_class = NULL;
}
